--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -7,8 +7,8 @@
     <title>Grouping Selectors</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+  <body class="button">
+    <button id="firstElem">Click Me!</button>
+    <button id="secondElem">No, Click Me!</button>
   </body>
 </html>
